--- a/ThueNha/Views/Shared/_Layout.cshtml
+++ b/ThueNha/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <div class="content">
             <h1>SELECTION YOUR HOUSE</h1>
             <p>Review the area honestly, in detail, in detail, housing prices, schools, many attractive<br> utilities, valuable information to know.</p>
-            <button href="" class="button"><span></span>WATCH MORE &#10132;</button>
+            <button href="" class="button" onclick="location.href='@Url.Action("Index", "TimThue")'"><span></span>WATCH MORE &#10132;</button>
         </div>
         @RenderBody()
     </div>
